--- a/README.org
+++ b/README.org
@@ -7,6 +7,9 @@ mkdir ~/.emacs.d
 git clone https://github.com/9ziggy9/my_emacs ~/.emacs.d
 #+END_SRC
 
+** NOTES
+   In order to use LSP mode with React/JSX projects, be sure to npm install eslint in the project root directory.
+
 
 ** RESOURCES
    SystemCrafter videos, obviously, some code stolen from Tsoding Daily. Helpful config walkthrough, where I stole web dev stuff:
