--- a/README.org
+++ b/README.org
@@ -10,13 +10,10 @@ git clone https://github.com/9ziggy9/my_emacs ~/.emacs.d
 ** NOTES
 *** I use Nerd Fonts, visit their repo for installation directions, or simply change font choice in init.el.
 *** In order to use LSP mode with React/JSX projects, be sure to npm install eslint in the project root directory.
-*** In case a project is ever blacklisted, you will want to run
+*** In case a project is ever blacklisted, you will want to run the following
 #+BEGIN_SRC
 M-x lsp-workspace-blacklist-remove
 #+END_SRC
-
-
-
 
 ** RESOURCES
    SystemCrafter videos, obviously, some code stolen from Tsoding Daily. Helpful config walkthrough, where I stole web dev stuff:
