--- a/README.org
+++ b/README.org
@@ -8,8 +8,14 @@ git clone https://github.com/9ziggy9/my_emacs ~/.emacs.d
 #+END_SRC
 
 ** NOTES
-   I use Nerd Fonts, visit their repo for installation directions, or simply change font choice in init.el
-   In order to use LSP mode with React/JSX projects, be sure to npm install eslint in the project root directory.
+*** I use Nerd Fonts, visit their repo for installation directions, or simply change font choice in init.el.
+*** In order to use LSP mode with React/JSX projects, be sure to npm install eslint in the project root directory.
+*** In case a project is ever blacklisted, you will want to run
+#+BEGIN_SRC
+M-x lsp-workspace-blacklist-remove
+#+END_SRC
+
+
 
 
 ** RESOURCES
